# prisma

./: .coverage  .dockerignore  .editorconfig  .env  .env.deepsearch.example  .env.development.example  .env.example  .env.local  .env.performance.example  .env.production.example  .env.template  .eslintrc.cjs  .eslintrc.json  .gitignore  .gitleaks.toml  .netlifyignore  .prettierrc  .secret-scan-ignore  ACCOUNTING_KB_COMPLETE_INDEX.md  ACCOUNTING_KB_COMPLETE_PACKAGE.md  ACCOUNTING_KB_DELIVERY_SUMMARY.md  ACCOUNTING_KB_FILES.txt  ACCOUNTING_KB_FILES_INDEX.md  ACCOUNTING_KB_FINAL_SUMMARY.txt  ACCOUNTING_KB_HANDOFF.md  ACCOUNTING_KB_HANDOFF_COMPLETE.md  ACCOUNTING_KB_HANDOFF_OLD.md  ACCOUNTING_KB_IMPLEMENTATION.md  ACCOUNTING_KB_IMPLEMENTATION_COMPLETE.md  ACCOUNTING_KB_IMPLEMENTATION_SUMMARY.md  ACCOUNTING_KB_INDEX.md  ACCOUNTING_KB_QUICK_REF.md  ACCOUNTING_KB_QUICK_START.md  ACCOUNTING_KB_QUICK_START_NOW.md  ACCOUNTING_KB_READY_TO_USE.md  ACCOUNTING_KB_VISUAL_ARCHITECTURE.txt  ACCOUNTING_KB_VISUAL_MAP.txt  ACCOUNTING_KNOWLEDGE_BASE_SUMMARY.md  ACCOUNTING_KNOWLEDGE_BASE_SUMMARY_OLD.md  ACCOUNTING_KNOWLEDGE_BASE_SYSTEM.md  (+516 more)
.changeset/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.vercel/: project.json
ACCEPTANCE/: audit_analytics_kam.md  close_month_end.md  handoff_archive.md  vat_cit_malta.md
AUDIT/: CHANGELOG_AUDIT.md  EXECUTIVE_SUMMARY.md  FULLSTACK_AUDIT_REPORT.md  README.md  REFACTOR_PLAN.md  findings.json  inventory.md
GO-LIVE/: GO-LIVE_SCORECARD.md  OPEN_ISSUES.md  RELEASE_RUNBOOK.md  REMEDIATION_PLAN.md  RISK_REGISTER.md  ROLLBACK_PLAN.md  a11y-report.md  go-live-scorecard.json
GOLIVE/: checklist.md  comms_templates.md  rollback.md
LEARNING/: checklist.md  governance.md  pipeline.md
PERF/: runbook.md  targets.md
POLICY/: data-retention-policy.json  permissions.json  roles.md
REFACTOR/: P10-CICD.md  P2-PACKAGES.md  P3-API.md  P5-ADMIN-PWA.md  P6-CLIENT.md  P7-TESTS.md  P9-OBS.md  map.md  plan.md
SECURITY/: headers.md  keys_rotation.md
agent/: PHASE_5_COMPLETE.md  PHASE_5_INDEX.md  PHASE_5_OPTIMIZATION_COMPLETE.md  PHASE_5_OPTIMIZATION_SCALE.md  README.md  types.ts
agents/: business.yaml  events.yaml  listing.yaml  logistics.yaml  marketing.yaml  marketplace.yaml  onboarding.yaml  payment.yaml  persona-v1.0.0.json  realestate.yaml  ride.yaml  support.yaml  vehicles.yaml
analytics/: .dockerignore  Dockerfile  __init__.py  index.d.ts  index.js  package.json
app/: README.md
audit/: deps.json  detect-secrets.baseline  env-matrix.csv  findings.json  inventory.json  repo-tree.txt  vercel-plan.md
baseline-results-20251128-165129/: agents.txt  component-loc.txt  coverage.txt  documentation.txt  page-sizes.txt  (+2 more)
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
desktop-app/src-tauri/src/commands/: database.rs  file_system.rs  mod.rs  system.rs  window.rs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri-legacy/: Cargo.toml
src-tauri-legacy/src/commands/: database.rs  file_system.rs  updater.rs
src-tauri-legacy/src/plugins/: tray.rs
src-tauri/migrations/: 001_initial.sql  002_add_indexes.sql  003_fts.sql
src-tauri/src/: commands.rs  config.rs  database.rs  db_migrations.rs  error.rs  main.rs  main_backup.rs  main_backup_full.rs  main_minimal.rs  sync_commands.rs  sync_commands_tests.rs  tests.rs
src-tauri/src/commands/: mod.rs  window.rs
src-tauri/tests/: integration.rs
(+3755 files in other folders)
