[package]
name = "prisma-desktop"
version = "0.1.0"
edition = "2021"
description = "Prisma Glow Desktop Application"
authors = ["Prisma Glow Team"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "dialog-all",
  "fs-all",
  "notification-all",
  "system-tray",
  "updater",
  "window-all",
  "path-all",
  "os-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
